# photogate

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
CADs/: photogate.FCStd
drivers/: Cargo.toml
drivers/src/: initalization.rs  lib.rs
drivers/src/display/: ht16k33_7seg_display.rs  mod.rs
photogate/: Cargo.toml  rust-toolchain.toml
photogate/.cargo/: config.toml
photogate/src/: main.rs
src/: display.rs  main.rs
