[workspace]

resolver = "2"
members = [
    "photogate",
    "drivers"
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-hal]
opt-level = 3

# [profile.dev.package.esp-hal-embassy]
# opt-level = 3
