[package]
name = "photogate-node"
version = "0.1.0"
authors = ["Jareth Gomes <jarethgomes@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.6.0", features = ["defmt", "nightly", "integrated-timers"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-async = "1.0.0"
esp-alloc = "0.4.0"
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "defmt",
] }
esp-hal = { version = "0.19.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "0e333f7aa2d36be97f5e42e427615e5e9dd629f", features = ["esp32c3", "async", "defmt"] }
esp-hal-embassy = { version = "0.2.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "0e333f7aa2d36be97f5e42e427615e5e9dd629f", features = ["esp32c3", "executors", "integrated-timers", "defmt"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "defmt-espflash"] }
futures = { version = "0.3.30", default-features = false }
strum = { version = "0.26.2", features = ["derive"], default-features = false }
drivers = { path = "../drivers" }
defmt = "0.3.8"
static_cell = { version = "2.1.0", features = ["nightly"] }

[[bin]]
name = "photogate-node"
test = false
